# python-project-lvl3-2021

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: PythonCI.yml  check.yml
page_loader/: __init__.py  app_logger.py  engine.py  file_interactors.py  logger.py  name_and_path_makers.py  page_loader.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: page.html  page_with_new_img_paths.html
